# GenAI-Arena

./: .gitignore  .gitmodules  README.md  README_dongfu.md  imagenhub_requirements.txt  pyproject.toml
arena_elo/: LICENSE  README.md  clean_battle_20240220.json  edition_model_info.json  generation_model_info.json  get_latest_data.sh  model_infos.json  pyproject.toml  requirements.txt  simple_test.py  update_elo_rating.sh
arena_elo/arena_elo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
arena_elo/elo_rating/: clean_battle_data.py  clean_chat_data.py  elo_analysis.py  generate_leaderboard.py  inspect_conv.py  inspect_conv_rating.py  inspect_cost.py  inspect_elo_rating_pkl.py  model_registry.py  upload_battle_data.py  upload_chat_data.py  utils.py
arena_elo/evaluator/: convert_to_evaluator_data.py  rating_analysis.ipynb
arena_elo/results/20240220/: elo_results.pkl  elo_results_image_editing.pkl  elo_results_t2i_generation.pkl  image_editing_leaderboard.csv  leaderboard.csv
arena_elo/results/latest/: t2i_generation_leaderboard.csv
fastchat/: constants.py  utils.py
fastchat/model/: model_adapter.py  model_imagenhub.py  model_imagenhub_ie.py  model_lavie.py  model_playground.py  model_registry.py  model_stable_diffusion.py
fastchat/serve/: base_model_worker.py  controller.log.2024-02-10  controller.py  gradio_block_arena_anony.py  gradio_block_arena_anony_ie.py  gradio_block_arena_named.py  gradio_block_arena_named_ie.py  gradio_web_image_editing_server.py  inference.py  (+7 more)
fschat.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+1 files in other folders)
